# msixty

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Pipfile  README.md  conanfile.py  lefthook.yml  requirements.txt
.circleci/: config.yml
.conan/profiles/: x86-Windows-v142-Debug  x86-Windows-v142-Release  x86_64-Windows-v142-Debug  x86_64-Windows-v142-Release
src/: CMakeLists.txt
src/bootstrapper/: CMakeLists.txt  bootstrapper.rc.in  main.cpp
src/cli/: CMakeLists.txt  cli.rc.in  main.cpp
